--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -11,7 +11,7 @@
 <div class="row">
   <div class="col-xs-12">
     <div class="btn-group" appDropdown>
-      <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
+      <button type="button" class="btn btn-primary dropdown-toggle" [disabled]="!authService.isAuthenticated()">Manage Recipe <span class="caret"></span></button>
       <ul class="dropdown-menu">
         <li><a (click)="onAddToShoppingList()" style="cursor: pointer">To Shopping List</a></li>
         <li><a style="cursor: pointer"(click)="onEditRecipe()">Edit Recipe</a></li>
